--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-  compile 'com.github.jorgecastilloprz:fillableloaders:1.01@aar'
+  compile project(':library')
   compile libAppCompat
   compile libSupportDesign
   compile libViewInjection
